2003-11-05  Tim Waugh  <twaugh@redhat.com>

	* src/gramps_main.py, src/FamilyView.py: Fix children enumeration
	in family view.

	* src/plugins/FilterEditor.py (ShowResults.__init__): Sort
	results.

2003-11-03  Tim Waugh  <twaugh@redhat.com>

	* src/plugins/WriteGedcom.py (GedcomWriter.write_families): Use
	frefn not prefn.

	* src/plugins/gedcomexport.glade, src/plugins/WriteGedcom.py: Added
	support for external image references.

2003-11-02  Tim Waugh  <twaugh@redhat.com>

	* src/ArgHandler.py, src/DbPrompter,py: clear_database takes no
	additional arguments.

	* src/plugins/WriteGedcom.py (GedcomWriter.__init__): Fixed
	default filename for export.

2003-11-01  Don Allingham  <dallingham@users.sourceforge.net>
	* src/StartupDialog.py: handle SuSE 9.0's broken handling of
	gconf
	* src/gramps.py: handle SuSE 9.0's broken handling of gconf
	* src/plugins/WriteCD.py: launch nautilus to burn:/// after exporting to a CD
	* src/PeopleView.py: rebuild after a filter is applied
	* src/DbPrompter: remove ZODB option
	* src/RelLib.py: remove ZODB option
	* src/gramps.glade: remove ZODB option
	* src/gramps_main.py: remove ZODB option

2003-11-01  Tim Waugh  <twaugh@redhat.com>
	* src/gramps_main.py (Gramps.delete_person_clicked): Fix removal
	of multiple people at once (bug #834102).

	* src/PeopleStore.py (PeopleStore.remove): Remove
	surname element after last individual with that surname is
	removed (bug #834105).

	* src/PeopleStore.py: Fixed double-click behaviour (bug #834104).

2003-10-31  Tim Waugh  <twaugh@redhat.com>
	* src/Makefile.am: Remove DrawDoc.py, TextDoc.py.

2003-10-30  Don Allingham  <dallingham@users.sourceforge.net>
	* src/plugins/WebPage.py: support for keeping track of options
	* src/plugins/TimeLine.py: support for keeping track of options
	* src/plugins/RelGraph.py: support for keeping track of options
	* src/plugins/IndivSummary.py: support for keeping track of options
	* src/plugins/IndivComplete.py: support for keeping track of options